# python_profesional_final_project

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: publish.yml
backend/: .env  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  RtspMergeServer.py  RtspServer.py  RtspWriter.py  auth.yml  main.py  makefile  pyproject.toml
backend/neural_net/: NeuralNet.py  yolobase.py
backend/rtsp_server/: RtspMergeServer.py  RtspServer.py
backend/tests/: test_rtsp_server.py  test_web.py
backend/web/: api_routes.py  auth.py  auth_routes.py  main.py  sys_routes.py
frontend/: .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: liveStreamVideoComponent.vue  сhartsComponent.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/plugins/: auth.ts  authDriver.ts  http-common.ts  websockets.ts
frontend/src/router/: index.ts
frontend/src/service/: AbstractApiService.ts  UserService.ts  nnService.ts  videoService.ts
frontend/src/store/: index.ts
frontend/src/types/: vue-auth.d.ts  vue-native-websocket-vue3.ts  vuex.d.ts
frontend/src/utils/: func.ts  rules.ts
frontend/src/views/: ChartView.vue  GeneralView.vue  LoginView.vue  UserView.vue
mmtx/: Readme.md  mediamtx.yml
