[project]
name = "pp-smart-eye"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.137.1",
    "httpx2>=2.4.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "ultralytics>=8.4.67",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]

[tool.isort]
profile = "black"
line_length = 176
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.black]
line-length = 176

target-version = [
    'py312',
    'py313'
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
python_files = "test_*.py *_test.py"
python_functions = "test_*"
addopts = [
  "-vv",				        # подробный вывод хода теста
  "--import-mode=importlib"  	# меньше проблем с импортами
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict = true
exclude = [".venv", "__pycache__", 'tests']
